--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -171,8 +171,9 @@
     }
     &--xxl,
     &--xl,
-    &--lg {
-      padding: 48px 0px;
+    &--lg,
+    &--md {
+      padding: 40px 0px;
     }
   }
 }
